blog button addEventListener done

--- a/index.html
+++ b/index.html
@@ -22,7 +22,10 @@
     <header class="backdrop-blur bg-transparent sticky top-0">
       <section class="bg-[#F9F7F3] pt-4 pb-8">
         <nav class="w-11/12 mx-auto flex justify-between items-center text-xl">
-          <button class="font-semibold bg-[#B4F461] py-2 px-4 rounded-lg">
+          <button
+            id="blog-btn"
+            class="font-semibold bg-[#B4F461] py-2 px-4 rounded-lg"
+          >
             Blog
           </button>
           <div class="flex items-center gap-2">
@@ -35,7 +38,7 @@
           </div>
           <div class="flex items-center gap-2">
             <img class="w-6 h-6" src="assets/coin.png" alt="Coin" />
-            <span class="opacity-70">5500 BDT</span>
+            <span class="opacity-70 font-semibold">5500 BDT</span>
           </div>
         </nav>
       </section>
@@ -172,5 +175,7 @@
         </div>
       </div>
     </main>
+
+    <script src="./js/blog.js"></script>
   </body>
 </html>
