--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         <div class="md:ml-6 mt-4 md:mt-0 w-full space-y-8">
           <div class="flex items-center bg-gray-200 p-2 rounded-md w-32">
             <img class="w-6 h-6" src="assets/coin.png" alt="Coin icon" />
-            <p class="ml-2 text-lg"><span id="collect-money">0</span> BDT</p>
+            <p class="ml-2 text-lg"><span id="noakhali-collect-money">0</span> BDT</p>
           </div>
           <h2 class="font-semibold text-2xl mt-4">
             Donate for Flood at Noakhali, Bangladesh
@@ -110,7 +110,7 @@
         <div class="md:ml-6 mt-4 md:mt-0 w-full space-y-9">
           <div class="flex items-center bg-gray-200 p-2 rounded-md w-32">
             <img class="w-6 h-6" src="assets/coin.png" alt="Coin icon" />
-            <span class="ml-2 text-lg">600 BDT</span>
+            <p class="ml-2 text-lg"><span id="feni-collect-money">600</span> BDT</p>
           </div>
           <h2 class="font-semibold text-2xl mt-4">
             Donate for Flood Relief in Feni,Bangladesh
@@ -150,7 +150,7 @@
         <div class="md:ml-6 mt-4 md:mt-0 w-full space-y-9">
           <div class="flex items-center bg-gray-200 p-2 rounded-md w-36">
             <img class="w-6 h-6" src="assets/coin.png" alt="Coin icon" />
-            <span class="ml-2 text-lg">2400 BDT</span>
+            <p class="ml-2 text-lg"><span id="quota-collect-money">2400</span> BDT</p>
           </div>
           <h2 class="font-semibold text-2xl mt-4">
             Aid for Injured in the Quota Movement
@@ -198,7 +198,10 @@
           </p>
           <p class="text-xl font-semibold mt-2 text-green-600">Successfully</p>
 
-          <button id="close-btn" class="mt-8 px-6 py-2 bg-gray-200 font-semibold rounded-lg">
+          <button
+            id="close-btn"
+            class="mt-8 px-6 py-2 bg-gray-200 font-semibold rounded-lg"
+          >
             Close Confirmation
           </button>
         </div>
