card 2 addEventListener done

--- a/index.html
+++ b/index.html
@@ -70,7 +70,9 @@
         <div class="md:ml-6 mt-4 md:mt-0 w-full space-y-8">
           <div class="flex items-center bg-gray-200 p-2 rounded-md w-32">
             <img class="w-6 h-6" src="assets/coin.png" alt="Coin icon" />
-            <p class="ml-2 text-lg"><span id="noakhali-collect-money">0</span> BDT</p>
+            <p class="ml-2 text-lg">
+              <span id="noakhali-collect-money">0</span> BDT
+            </p>
           </div>
           <h2 class="font-semibold text-2xl mt-4">
             Donate for Flood at Noakhali, Bangladesh
@@ -110,7 +112,9 @@
         <div class="md:ml-6 mt-4 md:mt-0 w-full space-y-9">
           <div class="flex items-center bg-gray-200 p-2 rounded-md w-32">
             <img class="w-6 h-6" src="assets/coin.png" alt="Coin icon" />
-            <p class="ml-2 text-lg"><span id="feni-collect-money">600</span> BDT</p>
+            <p class="ml-2 text-lg">
+              <span id="feni-collect-money">600</span> BDT
+            </p>
           </div>
           <h2 class="font-semibold text-2xl mt-4">
             Donate for Flood Relief in Feni,Bangladesh
@@ -126,11 +130,13 @@
             need.
           </p>
           <input
+            id="card-2-input-number"
             class="mt-4 border-2 rounded-lg p-3 w-full"
             type="text"
             placeholder="Write Donation Amount"
           />
           <button
+            id="card-2-btn"
             class="w-full font-semibold bg-[#B4F461] py-2 px-4 rounded-lg mt-3"
           >
             Donate Now
@@ -150,7 +156,9 @@
         <div class="md:ml-6 mt-4 md:mt-0 w-full space-y-9">
           <div class="flex items-center bg-gray-200 p-2 rounded-md w-36">
             <img class="w-6 h-6" src="assets/coin.png" alt="Coin icon" />
-            <p class="ml-2 text-lg"><span id="quota-collect-money">2400</span> BDT</p>
+            <p class="ml-2 text-lg">
+              <span id="quota-collect-money">2400</span> BDT
+            </p>
           </div>
           <h2 class="font-semibold text-2xl mt-4">
             Aid for Injured in the Quota Movement
@@ -167,11 +175,13 @@
             their time of need.
           </p>
           <input
+          id="card-3-input-number"
             class="mt-4 border-2 rounded-lg p-3 w-full"
             type="text"
             placeholder="Write Donation Amount"
           />
           <button
+            id="card-3-btn"
             class="w-full font-semibold bg-[#B4F461] py-2 px-4 rounded-lg mt-3"
           >
             Donate Now
@@ -210,6 +220,6 @@
 
     <script src="./js/utilities.js"></script>
     <script src="./js/blog.js"></script>
-    <script src="/js/donate.js"></script>
+    <script src="./js/donate.js"></script>
   </body>
 </html>
