--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
   </head>
   <body style="font-family: 'Lexend', sans-serif">
     <!-- Header Section Start Here-->
-    <header class="backdrop-blur bg-transparent sticky top-0">
-      <section class="bg-[#F9F7F3] pt-4 pb-8">
+    <header class="backdrop-blur-md sticky top-0">
+      <section class="bg-[#F9F7F3] pt-4 pb-8 opacity-75">
         <nav class="w-11/12 mx-auto flex justify-between items-center text-xl">
           <button
             id="blog-btn"
@@ -25,7 +25,7 @@
           </button>
           <div class="flex items-center gap-2">
             <img class="w-9 h-9" src="assets/logo.png" alt="" />
-            <span class="hidden md:block font-semibold">Donate Bangladesh</span>
+            <h1 class="hidden md:block font-semibold">Donate Bangladesh</h1>
           </div>
           <div class="flex items-center gap-2">
             <img class="w-6 h-6" src="assets/coin.png" alt="" />
@@ -36,11 +36,15 @@
         </nav>
       </section>
       <div class="text-center pt-8 pb-8">
-        <button class="font-semibold bg-[#B4F461] py-2 px-4 rounded-lg">
+        <button
+          id="donation-btn"
+          class="font-semibold bg-[#B4F461] text-xl py-2 px-4 rounded-lg"
+        >
           Donation
         </button>
         <button
-          class="border rounded-lg text-xl opacity-80 px-4 py-2 ml-2 bg-gray-100"
+          id="history-btn"
+          class="font-semibold border rounded-lg text-xl opacity-80 px-4 py-2 ml-2 bg-gray-100 hover:bg-gray-300"
         >
           History
         </button>
@@ -49,158 +53,173 @@
     <!-- Header Section End Here-->
 
     <!-- Main Section Start Here-->
-    <main class="mt-8 mb-11 space-y-8 w-11/12 mx-auto">
-      <!-- Card 1 -->
-      <div
-        class="flex flex-col md:flex-row items-start bg-white shadow-lg border p-6 rounded-lg"
-      >
-        <img src="assets/noakhali.png" alt="" class="md:w-[50%] rounded-lg" />
-        <!-- Text Section -->
-        <div class="md:ml-6 mt-4 md:mt-0 w-full space-y-8">
-          <div class="flex items-center bg-gray-200 p-2 rounded-md w-32">
-            <img class="w-6 h-6" src="assets/coin.png" alt="" />
-            <p class="ml-2 text-lg">
-              <span id="noakhali-collect-money">0</span> BDT
+    <main>
+      <div id="main-section" class="w-11/12 mx-auto mt-8 mb-11 space-y-8">
+        <!-- Card 1 -->
+        <div
+          class="flex flex-col gap-5 md:flex-row items-start bg-white shadow-lg border p-6 rounded-lg"
+        >
+          <img src="assets/noakhali.png" alt="" class="md:w-[50%] rounded-lg" />
+          <!-- Text Section -->
+          <div class="md:ml-6 mt-4 md:mt-0 w-full space-y-8">
+            <div class="flex items-center bg-gray-200 p-2 rounded-md w-32">
+              <img class="w-6 h-6" src="assets/coin.png" alt="" />
+              <p class="ml-2 text-lg">
+                <span id="noakhali-collect-money">0</span> BDT
+              </p>
+            </div>
+            <h2 class="font-semibold text-2xl mt-4">
+              Donate for Flood at Noakhali, Bangladesh
+            </h2>
+            <p class="mt-2 text-gray-700">
+              The recent floods in Noakhali have caused significant damage to
+              homes infrastructure. Your donation will help provide essential
+              supplies and to those affected by this disaster. Every
+              contribution, big or small, makes difference. Please join us in
+              supporting the relief efforts and making a positive impact on the
+              lives of those in need.
             </p>
+            <input
+              id="card-1-input-number"
+              class="mt-4 border-2 rounded-lg p-3 w-full"
+              type="text"
+              placeholder="Write Donation Amount"
+            />
+            <button
+              id="card-1-btn"
+              class="w-full font-semibold bg-[#B4F461] py-2 px-4 rounded-lg mt-3"
+            >
+              Donate Now
+            </button>
           </div>
-          <h2 class="font-semibold text-2xl mt-4">
-            Donate for Flood at Noakhali, Bangladesh
-          </h2>
-          <p class="mt-2 text-gray-700">
-            The recent floods in Noakhali have caused significant damage to
-            homes infrastructure. Your donation will help provide essential
-            supplies and to those affected by this disaster. Every contribution,
-            big or small, makes difference. Please join us in supporting the
-            relief efforts and making a positive impact on the lives of those in
-            need.
-          </p>
-          <input
-            id="card-1-input-number"
-            class="mt-4 border-2 rounded-lg p-3 w-full"
-            type="text"
-            placeholder="Write Donation Amount"
-          />
-          <button
-            id="card-1-btn"
-            class="w-full font-semibold bg-[#B4F461] py-2 px-4 rounded-lg mt-3"
-          >
-            Donate Now
-          </button>
         </div>
-      </div>
 
-      <!-- Card 2 -->
-      <div
-        class="flex flex-col md:flex-row items-start bg-white shadow-lg border p-6 rounded-lg"
-      >
-        <img src="assets/feni.png" alt="" class="md:w-[50%] rounded-lg" />
-        <!-- Text Section -->
-        <div class="md:ml-6 mt-4 md:mt-0 w-full space-y-9">
-          <div class="flex items-center bg-gray-200 p-2 rounded-md w-32">
-            <img class="w-6 h-6" src="assets/coin.png" alt="" />
-            <p class="ml-2 text-lg">
-              <span id="feni-collect-money">600</span> BDT
+        <!-- Card 2 -->
+        <div
+          class="flex flex-col gap-5 md:flex-row items-start bg-white shadow-lg border p-6 rounded-lg"
+        >
+          <img src="assets/feni.png" alt="" class="md:w-[50%] rounded-lg" />
+          <!-- Text Section -->
+          <div class="md:ml-6 mt-4 md:mt-0 w-full space-y-9">
+            <div class="flex items-center bg-gray-200 p-2 rounded-md w-32">
+              <img class="w-6 h-6" src="assets/coin.png" alt="" />
+              <p class="ml-2 text-lg">
+                <span id="feni-collect-money">600</span> BDT
+              </p>
+            </div>
+            <h2 class="font-semibold text-2xl mt-4">
+              Donate for Flood Relief in Feni,Bangladesh
+            </h2>
+            <p class="mt-2 text-gray-700">
+              The recent floods in Feni have devastated local communities,
+              leading to severe disruption and loss. Your generous donation will
+              help provide immediate aid, including food, clean water, and
+              medical supplies, to those affected by this calamity. Together, we
+              can offer crucial support and help rebuild lives in the aftermath
+              of this disaster. Every contribution counts towards making a real
+              difference. Please consider donating today to assist those in
+              urgent need.
             </p>
+            <input
+              id="card-2-input-number"
+              class="mt-4 border-2 rounded-lg p-3 w-full"
+              type="text"
+              placeholder="Write Donation Amount"
+            />
+            <button
+              id="card-2-btn"
+              class="w-full font-semibold bg-[#B4F461] py-2 px-4 rounded-lg mt-3"
+            >
+              Donate Now
+            </button>
           </div>
-          <h2 class="font-semibold text-2xl mt-4">
-            Donate for Flood Relief in Feni,Bangladesh
-          </h2>
-          <p class="mt-2 text-gray-700">
-            The recent floods in Feni have devastated local communities, leading
-            to severe disruption and loss. Your generous donation will help
-            provide immediate aid, including food, clean water, and medical
-            supplies, to those affected by this calamity. Together, we can offer
-            crucial support and help rebuild lives in the aftermath of this
-            disaster. Every contribution counts towards making a real
-            difference. Please consider donating today to assist those in urgent
-            need.
-          </p>
-          <input
-            id="card-2-input-number"
-            class="mt-4 border-2 rounded-lg p-3 w-full"
-            type="text"
-            placeholder="Write Donation Amount"
-          />
-          <button
-            id="card-2-btn"
-            class="w-full font-semibold bg-[#B4F461] py-2 px-4 rounded-lg mt-3"
-          >
-            Donate Now
-          </button>
         </div>
-      </div>
 
-      <!-- Card 3 -->
-      <div
-        class="flex flex-col md:flex-row items-start bg-white shadow-lg border p-6 rounded-lg"
-      >
-        <img
-          src="assets/quota-protest.png"
-          alt=""
-          class="md:w-[50%] rounded-lg"
-        />
-        <!-- Text Section -->
-        <div class="md:ml-6 mt-4 md:mt-0 w-full space-y-9">
-          <div class="flex items-center bg-gray-200 p-2 rounded-md w-36">
-            <img class="w-6 h-6" src="assets/coin.png" alt="" />
-            <p class="ml-2 text-lg">
-              <span id="quota-collect-money">2400</span> BDT
+        <!-- Card 3 -->
+        <div
+          class="flex flex-col gap-5 md:flex-row items-start bg-white shadow-lg border p-6 rounded-lg"
+        >
+          <img
+            src="assets/quota-protest.png"
+            alt=""
+            class="md:w-[50%] rounded-lg"
+          />
+          <!-- Text Section -->
+          <div class="md:ml-6 mt-4 md:mt-0 w-full space-y-9">
+            <div class="flex items-center bg-gray-200 p-2 rounded-md w-36">
+              <img class="w-6 h-6" src="assets/coin.png" alt="" />
+              <p class="ml-2 text-lg">
+                <span id="quota-collect-money">2400</span> BDT
+              </p>
+            </div>
+            <h2 class="font-semibold text-2xl mt-4">
+              Aid for Injured in the Quota Movement
+            </h2>
+            <p class="mt-2 text-gray-700">
+              The recent Quota movement has resulted in numerous injuries and
+              significant hardship for many individuals. Your support is crucial
+              in providing medical assistance, rehabilitation, and necessary
+              supplies to those affected. By contributing, you help ensure that
+              injured individuals receive the care and support they need during
+              this challenging time. Every donation plays a vital role in
+              alleviating their suffering and aiding in their recovery. Please
+              consider making a donation to support these brave individuals in
+              their time of need.
             </p>
+            <input
+              id="card-3-input-number"
+              class="mt-4 border-2 rounded-lg p-3 w-full"
+              type="text"
+              placeholder="Write Donation Amount"
+            />
+            <button
+              id="card-3-btn"
+              class="w-full font-semibold bg-[#B4F461] py-2 px-4 rounded-lg mt-3"
+            >
+              Donate Now
+            </button>
           </div>
-          <h2 class="font-semibold text-2xl mt-4">
-            Aid for Injured in the Quota Movement
-          </h2>
-          <p class="mt-2 text-gray-700">
-            The recent Quota movement has resulted in numerous injuries and
-            significant hardship for many individuals. Your support is crucial
-            in providing medical assistance, rehabilitation, and necessary
-            supplies to those affected. By contributing, you help ensure that
-            injured individuals receive the care and support they need during
-            this challenging time. Every donation plays a vital role in
-            alleviating their suffering and aiding in their recovery. Please
-            consider making a donation to support these brave individuals in
-            their time of need.
-          </p>
-          <input
-            id="card-3-input-number"
-            class="mt-4 border-2 rounded-lg p-3 w-full"
-            type="text"
-            placeholder="Write Donation Amount"
-          />
-          <button
-            id="card-3-btn"
-            class="w-full font-semibold bg-[#B4F461] py-2 px-4 rounded-lg mt-3"
-          >
-            Donate Now
-          </button>
+        </div>
+
+        <!-- Successfully Messages Section-->
+        <div
+          id="successfully-messages"
+          class="hidden fixed left-5 top-44 md:left-[525px] bg-opacity-50"
+        >
+          <div class="bg-white w-96 rounded-lg p-8 text-center">
+            <h2 class="text-3xl font-bold text-gray-800">Congrats!</h2>
+            <div class="my-4">
+              <img src="assets/coin.png" alt="" class="w-12 mx-auto" />
+            </div>
+            <p class="text-lg font-medium text-gray-700">
+              You Have Donated for Humankind
+            </p>
+            <p class="text-xl font-semibold mt-2 text-green-600">
+              Successfully
+            </p>
+
+            <button
+              id="close-btn"
+              class="mt-8 px-6 py-2 bg-gray-200 font-semibold rounded-lg"
+            >
+              Close Confirmation
+            </button>
+          </div>
         </div>
       </div>
 
-      <!-- Successfully Messages Section-->
-      <div
-        id="successfully-messages"
-        class="hidden fixed left-5 top-44 md:left-[525px] bg-opacity-50"
-      >
-        <div class="bg-white w-96 rounded-lg p-8 text-center">
-          <h2 class="text-3xl font-bold text-gray-800">Congrats!</h2>
-          <div class="my-4">
-            <img src="assets/coin.png" alt="" class="w-12 mx-auto" />
-          </div>
-          <p class="text-lg font-medium text-gray-700">
-            You Have Donated for Humankind
-          </p>
-          <p class="text-xl font-semibold mt-2 text-green-600">Successfully</p>
-
-          <button
-            id="close-btn"
-            class="mt-8 px-6 py-2 bg-gray-200 font-semibold rounded-lg"
-          >
-            Close Confirmation
-          </button>
-        </div>
-      </div>
+      <!-- History Section Start Here -->
+      <section
+        id="btn-show-history"
+        class="hidden w-11/12 mx-auto min-h-[485px]"
+      ></section>
+      <!-- History Section End Here -->
     </main>
     <!-- Main Section End Here-->
+
+    <footer>
+      <div class="bg-[#F9F7F3] p-10"></div>
+    </footer>
 
     <script src="./js/utilities.js"></script>
     <script src="./js/blog.js"></script>
